[package]
name = "seven-dtd-companion"
version = "1.0.0"
edition = "2021"

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
percent-encoding = "2.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
