[package]
name = "seven-dtd-companion"
version = "1.0.0"
edition = "2021"

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
percent-encoding = "2.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
# Remote save sources (read server files into a local cache). Pure-Rust, no OpenSSL/libssh2:
# russh uses the `ring` crypto backend so the single .exe builds on stock MSVC (no NASM/cmake).
russh = { version = "0.61", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.3"
tokio = { version = "1", features = ["rt", "io-util", "fs", "net", "macros", "time"] }
# FTP + FTPS (explicit FTP-over-TLS). native-tls = SChannel on Windows (no OpenSSL/NASM build deps).
suppaftp = { version = "9", features = ["native-tls"] }
# In-app self-update: HTTPS GET of the latest GitHub release asset. Default features
# give rustls + ring (ring is already pulled by russh) — no OpenSSL/NASM build deps.
ureq = "2"
# Self-update signature verification: each release .exe is signed with an OFFLINE Ed25519
# key (never on GitHub); the app verifies the .sig with the embedded public key before
# swapping, so a compromised GitHub account/release cannot push unsigned malicious code.
# Pure Rust, no build deps. The app uses ed25519-dalek only to VERIFY; key-gen + signing
# live in the separate `keytool` dev binary (src/bin/keytool.rs, not shipped) — that's the
# only user of getrandom.
ed25519-dalek = "2"
getrandom = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
